--- a/IDPA XDW 1/.classpath
+++ b/IDPA XDW 1/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="dotmatrix.jar"/>
 	<classpathentry kind="lib" path="controlsfx-8.40.12.jar"/>
 	<classpathentry kind="lib" path="jmetro-8.5.8.jar"/>
+	<classpathentry kind="lib" path="org.apache.commons.io.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
