--- a/IDPA XDW 1/bin/.gitignore
+++ b/IDPA XDW 1/bin/.gitignore
@@ -1,3 +1,17 @@
-/application/
+/Versions Logo.jpg
+/addVersion.png
 /animations/
+/application/
+/folder2.png
+/github.png
+/githubw.png
+/home.png
+/home1.png
+/icon-main.png
+/icon-main@2x.png
+/icon-main@3x.png
+/iconN (1).png
+/iconNew.png
 /images/
+/pin.png
+/unpin.png
